--- a/views/names.ejs
+++ b/views/names.ejs
@@ -18,11 +18,11 @@
         <h4>Email Id: <%=items.emailId %></h4>
         <h4>Address: <%=items.address %></h4>
         <h4>Total: <%=items.total%></h4>
-        <!-- <form action="/sendMsg" method="post">
+        <form action="/sendMsg" method="post">
           <input type="hidden" name="sendNumber" value="<%= items.phoneNumber %>">
           <input type="hidden" name="sendAmount" value="<%= items.total %>">
           <button type="submit" name="sendBtn">Send Message</button>
-        </form> -->
+        </form>
       </div>
       <div class="mainTransact">
         <div class="date Tag ">
